--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -41,7 +41,8 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right" th:if="${session.user == null}">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=04756ad84718e094174b&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
+                <li th:if="${session.user == null}">
+                    <a th:href="@{https://github.com/login/oauth/authorize(client_id='04756ad84718e094174b',redirect_uri=${#httpServletRequest.getRequestURL()+'callback'},scope='user',state=1)}">登录</a>
                 </li>
             </ul>
         </div>
