--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12 main-left">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
-            <div class="media" th:each="question : ${pageBean.getList()}">
+            <div class="media" th:each="question : ${pageBean.getList()}" th:if="${pageBean !=null}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}" src="https://avatars2.githubusercontent.com/u/32722446?v=4" alt="...">
@@ -67,7 +67,7 @@
             <h3>热门话题</h3>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
             <ul class="question-releated">
-                <li th:each="hot:${hots}" class="question-releated">
+                <li th:each="hot:${hots}" th:if="${hots !=null}" class="question-releated">
                     <a th:href="@{'/question/'+${hot.id}}" th:text="${hot.title}"></a>
                     <span class="index-text-desc">• [[${hot.commentCount}]] 个回复 • [[${hot.viewCount}]] 次浏览 </span>
 
